--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,12 @@ JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
+
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+
+POSTGRES_DB=hls
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=pg123456
+
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
