--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,59 @@
-version: '3.8'
 name: hls
 services:
-
   db:
-    container_name: hls_db
-    image: pg
+    # container_name: ${POSTGRES_HOST}
     build: 
       context: .
-      dockerfile: db.Dockerfile
+      dockerfile: db_Dockerfile
     restart: always
     env_file:
       - .env
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    # logging:
+    #   driver: "json-file"
+    #   options:
+    #     max-size: "10m"
+    #     max-file: "3"
     volumes:
-      - data:/var/lib/postgresql/data
-      - logs:/var/log/postgresql/logs
+      - db:/var/lib/postgresql/data
+    # healthcheck:
+    #   test: ['CMD-SHELL', 'pg_isready -U postgres -d hls']
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 5
+    #   start_period: 10s
     ports:
       - '${POSTGRES_PORT}:${POSTGRES_PORT}'
     networks:
-      - net
+      - my_net
 
   app:
-    container_name: hls_app
+    # container_name: app
     restart: always
     build:
       context: .
       dockerfile: Dockerfile
-    env_file:
-      - .env
     ports:
       - '${PORT}:${PORT}'
-
+    env_file:
+      - .env
+    # logging:
+    #   driver: "json-file"
+    #   options:
+    #     max-size: "10m"
+    #     max-file: "3"
     networks:
-      - net
+      - my_net
     depends_on:
       - db
-    environment:
-      DATABASE_URL: ${DATABASE_URL}
 
 volumes:
-  data:
-  logs:
+  db:
 
 networks:
-  net:
+  my_net:
     driver: bridge
   
