--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=3000
+PORT=4000
 
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
@@ -6,11 +6,12 @@ JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
 
-POSTGRES_HOST=db
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="pgpass123"
+# POSTGRES_HOST="localhost"
+POSTGRES_HOST="db"
 POSTGRES_PORT=5432
+POSTGRES_DB="hls"
 
-POSTGRES_DB=hls
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=pg123456
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
-DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
