--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,27 @@
+version: '3.8'
 name: hls
 services:
   db:
-    # container_name: ${POSTGRES_HOST}
+    # container_name: 'db'
     build: 
       context: .
       dockerfile: db_Dockerfile
     restart: always
     env_file:
       - .env
-    environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    # logging:
-    #   driver: "json-file"
-    #   options:
-    #     max-size: "10m"
-    #     max-file: "3"
     volumes:
       - db:/var/lib/postgresql/data
-    # healthcheck:
-    #   test: ['CMD-SHELL', 'pg_isready -U postgres -d hls']
-    #   interval: 10s
-    #   timeout: 5s
-    #   retries: 5
-    #   start_period: 10s
     ports:
       - '${POSTGRES_PORT}:${POSTGRES_PORT}'
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
     networks:
       - my_net
 
   app:
-    # container_name: app
     restart: always
     build:
       context: .
@@ -40,11 +30,11 @@ services:
       - '${PORT}:${PORT}'
     env_file:
       - .env
-    # logging:
-    #   driver: "json-file"
-    #   options:
-    #     max-size: "10m"
-    #     max-file: "3"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
     networks:
       - my_net
     depends_on:
