feat: add scanning and restart

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    volumes:
+     - ./src:/app/src/
     ports:
       - '${PORT}:${PORT}'
     env_file:
