--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "test:refresh": "cross-env TEST_MODE=auth jest --testPathPattern refresh.e2e.spec.ts --noStackTrace --runInBand",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "docker-scan:app": "docker scout cves --details local://hls-app:latest",
+    "docker-scan:db": "docker scout cves --details local://hls-db:latest"
+
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
