--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,8 @@ TOKEN_REFRESH_EXPIRE_TIME=24h
 
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="pgpass123"
-POSTGRES_HOST="localhost"
+# POSTGRES_HOST="localhost"
+POSTGRES_HOST="db"
 POSTGRES_PORT=5432
 POSTGRES_DB="hls"
 
